logs/dag_id=get_todays_gamesv4/run_id=manual__2023-04-03T02:17:25.927158+00:00/task_id=create_sql_table_task/attempt=1.log
[2023-04-03T02:17:37.010+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: get_todays_gamesv4.create_sql_table_task manual__2023-04-03T02:17:25.927158+00:00 [queued]>
[2023-04-03T02:17:37.020+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: get_todays_gamesv4.create_sql_table_task manual__2023-04-03T02:17:25.927158+00:00 [queued]>
[2023-04-03T02:17:37.021+0000] {taskinstance.py:1282} INFO - 
--------------------------------------------------------------------------------
[2023-04-03T02:17:37.021+0000] {taskinstance.py:1283} INFO - Starting attempt 1 of 1
[2023-04-03T02:17:37.021+0000] {taskinstance.py:1284} INFO - 
--------------------------------------------------------------------------------
[2023-04-03T02:17:37.039+0000] {taskinstance.py:1303} INFO - Executing <Task(PostgresOperator): create_sql_table_task> on 2023-04-03 02:17:25.927158+00:00
[2023-04-03T02:17:37.045+0000] {standard_task_runner.py:55} INFO - Started process 919 to run task
[2023-04-03T02:17:37.049+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'get_todays_gamesv4', 'create_sql_table_task', 'manual__2023-04-03T02:17:25.927158+00:00', '--job-id', '104', '--raw', '--subdir', 'DAGS_FOLDER/todays_games.py', '--cfg-path', '/tmp/tmpvr_8sask']
[2023-04-03T02:17:37.049+0000] {standard_task_runner.py:83} INFO - Job 104: Subtask create_sql_table_task
[2023-04-03T02:17:37.117+0000] {task_command.py:388} INFO - Running <TaskInstance: get_todays_gamesv4.create_sql_table_task manual__2023-04-03T02:17:25.927158+00:00 [running]> on host bb4d827b1601
[2023-04-03T02:17:37.198+0000] {taskinstance.py:1511} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=get_todays_gamesv4
AIRFLOW_CTX_TASK_ID=create_sql_table_task
AIRFLOW_CTX_EXECUTION_DATE=2023-04-03T02:17:25.927158+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-03T02:17:25.927158+00:00
[2023-04-03T02:17:37.199+0000] {sql.py:254} INFO - Executing: 
        drop table if exists games;
        create table games (
            away_name VARCHAR(25),
            home_name VARCHAR(25),
            away_probable_pitcher VARCHAR(25),
            home_probable_pitcher VARCHAR(25),
            venue_name VARCHAR(25);
    
[2023-04-03T02:17:37.209+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-04-03T02:17:37.584+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-04-03T02:17:37.589+0000] {sql.py:375} INFO - Running statement: 
        drop table if exists games;
        create table games (
            away_name VARCHAR(25),
            home_name VARCHAR(25),
            away_probable_pitcher VARCHAR(25),
            home_probable_pitcher VARCHAR(25),
            venue_name VARCHAR(25);
    , parameters: None
[2023-04-03T02:17:37.590+0000] {taskinstance.py:1775} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 8:             venue_name VARCHAR(25);
                                          ^

[2023-04-03T02:17:37.603+0000] {taskinstance.py:1326} INFO - Marking task as FAILED. dag_id=get_todays_gamesv4, task_id=create_sql_table_task, execution_date=20230403T021725, start_date=20230403T021737, end_date=20230403T021737
[2023-04-03T02:17:37.616+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 104 for task create_sql_table_task (syntax error at or near ";"
LINE 8:             venue_name VARCHAR(25);
                                          ^
; 919)
[2023-04-03T02:17:37.662+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-03T02:17:37.706+0000] {taskinstance.py:2585} INFO - 0 downstream tasks scheduled from follow-on schedule check
